fabrique-derive/tests/ui/invalid_relation_attribute_type.stderr
error: Unexpected type `bool` at relation
 --> tests/ui/invalid_relation_attribute_type.rs:4:1
  |
4 | / struct Anvil {
5 | |     #[fabrique(relation = true)]
6 | |     hammer_id: u32,
7 | |     weight: u32,
8 | | }
  | |_^
